ch#2/poi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poi-deployment
  #namespace: api
  labels:
    deploy: poi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poi
  template:
    metadata:
      labels:
        app: poi
    spec:
      containers:
      - image: "openhackaksacr.azurecr.io/poi:1.0"
        imagePullPolicy: Always
        name: poi
        livenessProbe:
          httpGet:
            path: /api/poi/healthcheck
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /api/poi/healthcheck
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        ports:
          - containerPort: 80
            name: http
            protocol: TCP
          - containerPort: 443
            name: https
            protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: poi-svc
  #namespace: api
spec:
  type: ClusterIP
  selector:
    app: poi
  ports:
    - protocol: TCP
      name: poi-http
      port: 80
      targetPort: 80
    - protocol: TCP
      name: poi-https
      port: 443
      targetPort: 443
