ch#2/tripviewer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripviewer-deploy
  #namespace: web
  labels:
    deploy: tripviewer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tripviewer
  template:
    metadata:
      labels:
        app: tripviewer
    spec:
      containers:
      - image: "openhackaksacr.azurecr.io/tripviewer:1.0"
        imagePullPolicy: Always
        name: tripviewer
        ports:
          - containerPort: 80
            name: http
            protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: tripviewer-svc
  #namespace: web
spec:
  type: ClusterIP
  selector:
    app: tripviewer
  ports:
    - protocol: TCP
      name: tripviewer-http
      port: 80
      targetPort: 80
    - protocol: TCP
      name: tripviewer-https
      port: 443
      targetPort: 443
