ch#2/user-java.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-java-deployment
  #namespace: api
  labels:
    deploy: user-java
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-java
  template:
    metadata:
      labels:
        app: user-java
    spec:
      containers:
      - image: "openhackaksacr.azurecr.io/user-java:1.0"
        imagePullPolicy: Always
        name: user-java
        livenessProbe:
          httpGet:
            path: /api/user-java/healthcheck
            port: 80
            httpHeaders:
            - name: Accept
              value: application/json
          initialDelaySeconds: 10
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /api/user-java/healthcheck
            port: 80
            httpHeaders:
            - name: Accept
              value: application/json
          initialDelaySeconds: 5
          periodSeconds: 5
        ports:
          - containerPort: 80
            name: http
            protocol: TCP
          - containerPort: 443
            name: https
            protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: user-java-svc
  #namespace: api
spec:
  type: ClusterIP
  selector:
    app: user-java
  ports:
    - protocol: TCP
      name: user-java-http
      port: 80
      targetPort: 80
    - protocol: TCP
      name: user-java-https
      port: 443
      targetPort: 443
